--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "log4js": "^4.5.1",
     "morgan": "~1.9.1",
+    "mysql": "^2.17.1",
     "stylus": "0.54.5"
   }
 }
