--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "http-errors": "~1.6.3",
     "log4js": "^4.5.1",
     "morgan": "~1.9.1",
-    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.10.2",
     "stylus": "0.54.5"
   }
 }
