--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.10.2",
+    "striptags": "^3.1.1",
     "stylus": "0.54.5"
   }
 }
