--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "log4js": "^4.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql2": "^1.6.5",
     "sequelize": "^5.10.2",
     "striptags": "^3.1.1",
