--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "sequelize": "^5.10.2",
     "striptags": "^3.1.1",
     "stylus": "0.54.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
