--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.2",
     "mysql2": "^1.6.5",
     "sequelize": "^5.10.2",
+    "showdown": "^1.9.0",
     "striptags": "^3.1.1",
     "stylus": "0.54.5"
   },
