--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "http-errors": "~1.6.3",
   "jsonwebtoken": "^8.5.1",
   "log4js": "^4.5.1",
+  "memory-cache": "^0.2.0",
   "morgan": "~1.9.1",
   "multer": "^1.4.2",
   "mysql2": "^1.6.5",
