--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "private": true,
  "scripts": {
   "start": "NODE_ENV=production PORT=3102 node index.js",
-  "dev": "nodemon index.js"
+  "dev": "nodemon index.js --trace-sync-io"
  },
  "nodemonConfig": {
   "ignore": [
